deploy: 9a6ef197cf21f9bf1e1602b2c05f27813d9bc6b5

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="This blogs contains articles on using data science in supply chain for data driven decisions." />
 <meta property="og:description" content="This blogs contains articles on using data science in supply chain for data driven decisions." />
-<link rel="canonical" href="https://supplychaindatascience.com/Supply-Chain-Data-Sciecnce/" />
-<meta property="og:url" content="https://supplychaindatascience.com/Supply-Chain-Data-Sciecnce/" />
+<link rel="canonical" href="https://supplychaindatascience/Supply-Chain-Data-Sciecnce/" />
+<meta property="og:url" content="https://supplychaindatascience/Supply-Chain-Data-Sciecnce/" />
 <meta property="og:site_name" content="Supply Chain Data Science" />
-<meta property="og:image" content="https://supplychaindatascience.com/Supply-Chain-Data-Sciecnce/images/logo.png" />
+<meta property="og:image" content="https://supplychaindatascience/Supply-Chain-Data-Sciecnce/images/logo.png" />
 <script type="application/ld+json">
-{"url":"https://supplychaindatascience.com/Supply-Chain-Data-Sciecnce/","@type":"WebSite","headline":"Supply Chain Data Science","image":"https://supplychaindatascience.com/Supply-Chain-Data-Sciecnce/images/logo.png","name":"Supply Chain Data Science","description":"This blogs contains articles on using data science in supply chain for data driven decisions.","@context":"https://schema.org"}</script>
+{"url":"https://supplychaindatascience/Supply-Chain-Data-Sciecnce/","@type":"WebSite","headline":"Supply Chain Data Science","image":"https://supplychaindatascience/Supply-Chain-Data-Sciecnce/images/logo.png","name":"Supply Chain Data Science","description":"This blogs contains articles on using data science in supply chain for data driven decisions.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/Supply-Chain-Data-Sciecnce/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://supplychaindatascience.com/Supply-Chain-Data-Sciecnce/feed.xml" title="Supply Chain Data Science" /><link rel="shortcut icon" type="image/x-icon" href="/Supply-Chain-Data-Sciecnce/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
+<link rel="stylesheet" href="/Supply-Chain-Data-Sciecnce/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://supplychaindatascience/Supply-Chain-Data-Sciecnce/feed.xml" title="Supply Chain Data Science" /><link rel="shortcut icon" type="image/x-icon" href="/Supply-Chain-Data-Sciecnce/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 
 <script>
